Implementa lombok e formata codigo