@@ -1,6 +1,8 @@
 package br.com.lucascosta.lcmoneyapi.exceptionhandler;
 
 import br.com.lucascosta.lcmoneyapi.service.exception.PessoaInexistenteOuInativaException;
+import lombok.Getter;
+import lombok.Setter;
 import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.MessageSource;
@@ -20,7 +22,6 @@ import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -32,49 +33,49 @@ public class LcmoneyExceptionHandler extends ResponseEntityExceptionHandler {
 
     @Override
     protected ResponseEntity<Object> handleHttpMessageNotReadable(HttpMessageNotReadableException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
-        String mensagemUsuario = messageSource.getMessage("requisicao.incorreta", null, LocaleContextHolder.getLocale());
-        String mensagemDesenvolvedor = Optional.ofNullable(ex.getCause()).orElse(ex).toString();
-        List<Erro> erros = Arrays.asList(new Erro(mensagemUsuario, mensagemDesenvolvedor));
+        var mensagemUsuario = messageSource.getMessage("requisicao.incorreta", null, LocaleContextHolder.getLocale());
+        var mensagemDesenvolvedor = Optional.ofNullable(ex.getCause()).orElse(ex).toString();
+        var erros = List.of(new Erro(mensagemUsuario, mensagemDesenvolvedor));
 
         return handleExceptionInternal(ex, erros, headers, HttpStatus.BAD_REQUEST, request);
     }
 
     @Override
     protected ResponseEntity<Object> handleMethodArgumentNotValid(MethodArgumentNotValidException ex, HttpHeaders headers, HttpStatus status, WebRequest request) {
-        List<Erro> erros = criarListaDeErros(ex.getBindingResult());
+        var erros = criarListaDeErros(ex.getBindingResult());
         return handleExceptionInternal(ex, erros, headers, HttpStatus.BAD_REQUEST, request);
 
     }
 
     @ExceptionHandler({EmptyResultDataAccessException.class})
     public ResponseEntity<Object> handleEmptyResultDataAccessException(EmptyResultDataAccessException ex, WebRequest request) {
-        String mensagemUsuario = messageSource.getMessage("recurso.nao-encontrado", null, LocaleContextHolder.getLocale());
-        String mensagemDesenvolvedor = ex.toString();
-        List<Erro> erros = Arrays.asList(new Erro(mensagemUsuario, mensagemDesenvolvedor));
+        var mensagemUsuario = messageSource.getMessage("recurso.nao-encontrado", null, LocaleContextHolder.getLocale());
+        var mensagemDesenvolvedor = ex.toString();
+        var erros = List.of(new Erro(mensagemUsuario, mensagemDesenvolvedor));
 
         return handleExceptionInternal(ex, erros, new HttpHeaders(), HttpStatus.NOT_FOUND, request);
     }
 
     @ExceptionHandler({DataIntegrityViolationException.class})
     public ResponseEntity<Object> handleDataIntegrityViolationException(DataIntegrityViolationException ex, WebRequest request) {
-        String mensagemUsuario = messageSource.getMessage("recurso.operacao-nao-permitida", null, LocaleContextHolder.getLocale());
-        String mensagemDesenvolvedor = ExceptionUtils.getRootCauseMessage(ex);
-        List<Erro> erros = Arrays.asList(new Erro(mensagemUsuario, mensagemDesenvolvedor));
+        var mensagemUsuario = messageSource.getMessage("recurso.operacao-nao-permitida", null, LocaleContextHolder.getLocale());
+        var mensagemDesenvolvedor = ExceptionUtils.getRootCauseMessage(ex);
+        var erros = List.of(new Erro(mensagemUsuario, mensagemDesenvolvedor));
 
         return handleExceptionInternal(ex, erros, new HttpHeaders(), HttpStatus.BAD_REQUEST, request);
     }
 
     @ExceptionHandler({PessoaInexistenteOuInativaException.class})
     public ResponseEntity<Object> handlePessoaInexistenteOuInativaException(PessoaInexistenteOuInativaException ex) {
-        String mensagemUsuario = messageSource.getMessage("pessoa.inexistente-ou-inativa", null, LocaleContextHolder.getLocale());
-        String mensagemDesenvolvedor = ex.toString();
-        List<Erro> erros = Arrays.asList(new Erro(mensagemUsuario, mensagemDesenvolvedor));
+        var mensagemUsuario = messageSource.getMessage("pessoa.inexistente-ou-inativa", null, LocaleContextHolder.getLocale());
+        var mensagemDesenvolvedor = ex.toString();
+        var erros = List.of(new Erro(mensagemUsuario, mensagemDesenvolvedor));
 
         return ResponseEntity.badRequest().body(erros);
     }
 
     private List<Erro> criarListaDeErros(BindingResult bindingResult) {
-        List<Erro> erros = new ArrayList<>();
+        var erros = new ArrayList<Erro>();
 
         for (FieldError fieldError : bindingResult.getFieldErrors()) {
             String mensagemUsuario = messageSource.getMessage(fieldError, LocaleContextHolder.getLocale());
@@ -86,6 +87,8 @@ public class LcmoneyExceptionHandler extends ResponseEntityExceptionHandler {
         return erros;
     }
 
+    @Getter
+    @Setter
     public static class Erro {
 
         private String mensagemUsuario;
@@ -94,14 +97,6 @@ public class LcmoneyExceptionHandler extends ResponseEntityExceptionHandler {
         public Erro(String mensagemUsuario, String mensagemDesenvolvedor) {
             this.mensagemUsuario = mensagemUsuario;
             this.mensagemDesenvolvedor = mensagemDesenvolvedor;
-        }
-
-        public String getMensagemUsuario() {
-            return mensagemUsuario;
-        }
-
-        public String getMensagemDesenvolvedor() {
-            return mensagemDesenvolvedor;
         }
     }
 }
